--- a/unittests/CppInterOp/CMakeLists.txt
+++ b/unittests/CppInterOp/CMakeLists.txt
@@ -84,12 +84,12 @@ export_executable_symbols(CppInterOpTests)
 
 unset(LLVM_LINK_COMPONENTS)
 
-set(EXTRA_TEST_SOURCE_FILES Utils.cpp)
-
 if (NOT EMSCRIPTEN)
+  set(EXTRA_TEST_SOURCE_FILES "")
   set(EXTRA_PATH_TEST_BINARIES /TestSharedLib/unittests/bin/$<CONFIG>/)
 endif()
 
+list(APPEND EXTRA_TEST_SOURCE_FILES Utils.cpp)
 add_cppinterop_unittest(DynamicLibraryManagerTests DynamicLibraryManagerTest.cpp ${EXTRA_TEST_SOURCE_FILES})
 
 target_link_libraries(DynamicLibraryManagerTests
