--- a/.github/workflows/emscripten.yml
+++ b/.github/workflows/emscripten.yml
@@ -539,14 +539,14 @@ jobs:
 
         emmake make -j ${{ env.ncpus }} check-cppinterop
         os="${{ matrix.os }}"
-        if [[ "${os}" != macos* ]] ; then
-          actual_size=$(stat -c%s "./lib/libclangCppInterOp.so")
-          max_size=$((40 * 1024 * 1024))
-          if [[ "$actual_size" -gt "$max_size" ]]; then
-            echo "Error: libclangCppInterOp.so is larger than 40 MB."
-            exit 1
-          fi
-        fi
+        #if [[ "${os}" != macos* ]] ; then
+        #  actual_size=$(stat -c%s "./lib/libclangCppInterOp.so")
+        #  max_size=$((40 * 1024 * 1024))
+        #  if [[ "$actual_size" -gt "$max_size" ]]; then
+        #    echo "Error: libclangCppInterOp.so is larger than 40 MB."
+        #    exit 1
+        #  fi
+        #fi
         cd ./unittests/CppInterOp/
         # Fresh install browsers, and run Emscripten tests in them
         # This is to match the Emscripten build instructions, where
