--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,15 @@ jobs:
       matrix:
         include:
           # Ubuntu Arm Jobs
+          - name: ubu24-arm-gcc12-clang-repl-22
+            os: ubuntu-24.04-arm
+            compiler: gcc-12
+            clang-runtime: '22'
+            cling: Off
+            cppyy: Off
+            llvm_enable_projects: "clang"
+            llvm_targets_to_build: "host;NVPTX"
+            Valgrind: On
           - name: ubu24-arm-gcc12-clang-repl-21
             os: ubuntu-24.04-arm
             compiler: gcc-12
@@ -31,7 +40,6 @@ jobs:
             cppyy: Off
             llvm_enable_projects: "clang"
             llvm_targets_to_build: "host;NVPTX"
-            Valgrind: On
           - name: ubu24-arm-gcc12-clang-repl-20
             os: ubuntu-24.04-arm
             compiler: gcc-12
@@ -66,7 +74,7 @@ jobs:
             llvm_enable_projects: "clang"
             llvm_targets_to_build: "host;NVPTX"
           # Ubuntu X86 Jobs
-          - name: ubu24-x86-gcc12-clang-repl-21
+          - name: ubu24-x86-gcc12-clang-repl-22
             os: ubuntu-24.04
             compiler: gcc-12
             clang-runtime: '21'
@@ -75,6 +83,14 @@ jobs:
             llvm_enable_projects: "clang"
             llvm_targets_to_build: "host;NVPTX"
             Valgrind: On
+          - name: ubu24-x86-gcc12-clang-repl-21
+            os: ubuntu-24.04
+            compiler: gcc-12
+            clang-runtime: '21'
+            cling: Off
+            cppyy: Off
+            llvm_enable_projects: "clang"
+            llvm_targets_to_build: "host;NVPTX"
           - name: ubu24-x86-gcc12-clang-repl-20
             os: ubuntu-24.04
             compiler: gcc-12
@@ -130,6 +146,14 @@ jobs:
             llvm_enable_projects: "clang"
             llvm_targets_to_build: "host;NVPTX"
           # MacOS Arm Jobs
+          - name: osx26-arm-clang-clang-repl-22
+            os: macos-26
+            compiler: clang
+            clang-runtime: '22'
+            cling: Off
+            cppyy: Off
+            llvm_enable_projects: "clang"
+            llvm_targets_to_build: "host"
           - name: osx26-arm-clang-clang-repl-21
             os: macos-26
             compiler: clang
@@ -181,6 +205,14 @@ jobs:
             llvm_enable_projects: "clang"
             llvm_targets_to_build: "host;NVPTX"
           # MacOS X86 Jobs
+          - name: osx15-x86-clang-clang-repl-22
+            os: macos-15-intel
+            compiler: clang
+            clang-runtime: '22'
+            cling: Off
+            cppyy: Off
+            llvm_enable_projects: "clang"
+            llvm_targets_to_build: "host"
           - name: osx15-x86-clang-clang-repl-21
             os: macos-15-intel
             compiler: clang
@@ -223,10 +255,10 @@ jobs:
             llvm_enable_projects: "clang"
             llvm_targets_to_build: "host;NVPTX"
           # Windows Arm Jobs
-          - name: win11-msvc-clang-repl-21
+          - name: win11-msvc-clang-repl-22
             os: windows-11-arm
             compiler: msvc
-            clang-runtime: '21'
+            clang-runtime: '22'
             cling: Off
             llvm_enable_projects: "clang"
             llvm_targets_to_build: "host;NVPTX"
@@ -239,10 +271,10 @@ jobs:
             llvm_enable_projects: "clang"
             llvm_targets_to_build: "host;NVPTX"
           # Windows X86 Jobs
-          - name: win2025-msvc-clang-repl-21
+          - name: win2025-msvc-clang-repl-22
             os: windows-2025
             compiler: msvc
-            clang-runtime: '21'
+            clang-runtime: '22'
             cling: Off
             llvm_enable_projects: "clang"
             llvm_targets_to_build: "host;NVPTX"
@@ -347,4 +379,5 @@ jobs:
       uses: mxschmitt/action-tmate@v3
       # When debugging increase to a suitable value!
       timeout-minutes: 30
+
 
