[test] Add tests for `CppGetProcAddress`, configure Utils, autogenerate CppInterOpTestsDispatch
The unittests now dynamically change behaviours from a standard library usage of CppInterOp to utilising the dispatch mechanism based on the the presence of the `ENABLE_DISPATCH_TESTS` flag

--- a/unittests/CppInterOp/CMakeLists.txt
+++ b/unittests/CppInterOp/CMakeLists.txt
@@ -11,6 +11,7 @@ else()
 endif()
 
 add_cppinterop_unittest(CppInterOpTests
+  ENABLE_DISPATCH
   CommentReflectionTest.cpp
   EnumReflectionTest.cpp
   FunctionReflectionTest.cpp
